crates/analyzer/tests/snapshots/errors__unsafe_misuse.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: unsafe function `mod_priv` can only be called in an unsafe function or block
  ┌─ compile_errors/unsafe_misuse.fe:8:5
  │
1 │ unsafe fn mod_priv() {}
  │ ------------------ `mod_priv` is defined here as unsafe
  ·
8 │     mod_priv()
  │     ^^^^^^^^ call to unsafe function
  │
  = Hint: put this call in an `unsafe` block if you're confident that it's safe to use here

error: unsafe function `priv_self` can only be called in an unsafe function or block
   ┌─ compile_errors/unsafe_misuse.fe:35:9
   │
28 │     unsafe fn priv_self(self) {
   │     ------------------- `priv_self` is defined here as unsafe
   ·
35 │         self.priv_self()
   │         ^^^^^^^^^^^^^^ call to unsafe function
   │
   = Hint: put this call in an `unsafe` block if you're confident that it's safe to use here

error: unsafe function `priv_nonself` can only be called in an unsafe function or block
   ┌─ compile_errors/unsafe_misuse.fe:36:9
   │
22 │     unsafe fn priv_nonself() {
   │     ---------------------- `priv_nonself` is defined here as unsafe
   ·
36 │         priv_nonself()
   │         ^^^^^^^^^^^^ call to unsafe function
   │
   = Hint: put this call in an `unsafe` block if you're confident that it's safe to use here


